--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
     <div id="system">
     </div>
     <div>
-        <input id="name">
+        <input id="name" autocomplete="off">
     </div>
     <div><button type="button" id="send">Send</button></div>
 </div>
