--- a/static/index.html
+++ b/static/index.html
@@ -15,14 +15,12 @@
     </div>
     <div><button type="button" id="send">Send</button></div>
 </div>
-<script>var transition = {pid: ''};</script>
-<script src='../static/n2o/protocols/bert.js'></script>
-<script src='../static/n2o/protocols/client.js'></script>
-<script src='../static/n2o/protocols/nitrogen.js'></script>
-<script src='../static/n2o/validation.js'></script>
-<script src='../static/n2o/bullet.js'></script>
+<script>host = location.hostname; port = location.port;</script>
+<script src='../static/n2o/heart.js'></script>
+<script src='../static/n2o/bert.js'></script>
 <script src='../static/n2o/utf8.js'></script>
 <script src='../static/n2o/n2o.js'></script>
-<script>protos = [ $bert, $client ]; N2O_start();</script>
+<script src='../static/n2o/nitro.js'></script>
+<script>protos = [ $bert ]; N2O_start();</script>
 </body>
 </html>
