--- a/static/index.html
+++ b/static/index.html
@@ -8,10 +8,10 @@
 <body>
 <div id="app">
     <div><a href="about.html">About this App</a></div>
-    <div id="system">
+    <div id="hist">
     </div>
     <div>
-        <input id="name" autocomplete="off">
+        <input id="msg" autocomplete="off">
     </div>
     <div><button type="button" id="send">Send</button></div>
 </div>
